add original and refactor code