@@ -1,1 +1,20 @@
 # resizing
+
+## **Important**: This work is not original and based on a Stack Overflow post.
+
+Credit: https://stackoverflow.com/users/1155209/jewelsea
+
+Source: https://stackoverflow.com/questions/41267418/how-to-change-a-shape-property-using-its-border-in-javafx
+
+## ResizingSample
+
+    cd ResizingSample
+    javac --module-path ../javafx-sdk-11.0.2/lib --add-modules javafx.controls ResizingSample.java
+    java --module-path ../javafx-sdk-11.0.2/lib --add-modules javafx.controls ResizingSample
+
+
+## ResizingSampleRefactor
+
+    cd ResizingSampleRefactor
+    javac --module-path ../javafx-sdk-11.0.2/lib --add-modules javafx.controls *.java
+    java --module-path ../javafx-sdk-11.0.2/lib --add-modules javafx.controls ResizingSampleRefactor
